--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.5.2",
+    "gatsby-plugin-netlify": "^2.5.0",
     "gatsby-plugin-offline": "^3.3.3",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.8.0",
